<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_xl">

        <!-- Ícono biométrico -->
        <FrameLayout
            android:id="@+id/icon_container"
            android:layout_width="@dimen/icon_size_lg"
            android:layout_height="@dimen/icon_size_lg"
            android:background="@drawable/bg_icon_circle"
            android:layout_marginTop="@dimen/spacing_xl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@android:drawable/ic_menu_mylocation"
                android:tint="@color/color_on_primary" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/color_on_background"
            android:textSize="@dimen/text_title"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/spacing_lg"
            app:layout_constraintTop_toBottomOf="@id/icon_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textColor="@color/color_on_surface"
            android:textSize="@dimen/text_subtitle"
            android:textAlignment="center"
            android:lineSpacingExtra="2dp"
            android:layout_marginTop="@dimen/spacing_sm"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Campo: User ID -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_user_id"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_id"
            android:layout_marginTop="@dimen/spacing_xl"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_on_background"
                android:imeOptions="actionDone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- ProgressBar -->
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_lg"
            app:layout_constraintTop_toBottomOf="@id/til_user_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Botón Autenticar -->
        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.App.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_authenticate"
            android:layout_marginTop="@dimen/spacing_lg"
            android:layout_marginBottom="@dimen/spacing_xl"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
